--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #212d67; }
+  background: #9194aa; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #50590f; }
+  background: #62e941; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ad66c9; }
+  background: #c37f0f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #b46896; }
+  background: #ec689b; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #47d1b4; }
+  background: #494c24; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #12b81d; }
+  background: #7ce0ee; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #303d48; }
+  background: #8a4755; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #732b8e; }
+  background: #dbb558; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b3bbfd; }
+  background: #cb16b5; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #beb952; }
+  background: #2b3ac4; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #a30b71; }
+  background: #0b9a15; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #fe0fa7; }
+  background: #ef72ee; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #c8d55d; }
+  background: #9a07b5; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #2f1292; }
+  background: #7fa56f; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #eccf0e; }
+  background: #9c93cb; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #607dd0; }
+  background: #51f691; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #b82747; }
+  background: #52179d; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #983a8d; }
+  background: #275790; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #70aec9; }
+  background: #1cc74a; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #4f2d31; }
+  background: #5a64d4; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #f3094f; }
+  background: #484bf1; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #f009ed; }
+  background: #0f60c9; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #6dc47b; }
+  background: #a88450; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #801b36; }
+  background: #13d66a; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #5976ee; }
+  background: #d99526; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #d40793; }
+  background: #c728e3; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #3a4583; }
+  background: #e68366; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #a0dd71; }
+  background: #cfdd91; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #3c1f0e; }
+  background: #384cab; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #cd33bb; }
+  background: #029632; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #dfb61d; }
+  background: #9f42d9; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #0125a2; }
+  background: #06866e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #4a2c43; }
+  background: #0f9053; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d0cdf2; }
+  background: #ee5a01; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #3b188b; }
+  background: #3adef5; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ae8c70; }
+  background: #75a7c0; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #cbb453; }
+  background: #dafbdd; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #efc036; }
+  background: #701a5d; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #073184; }
+  background: #8a50d7; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #d1f7a6; }
+  background: #063123; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ca72c4; }
+  background: #08140e; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #590261; }
+  background: #7ca89a; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #b2f88f; }
+  background: #d4a117; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #86f178; }
+  background: #1f8791; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #15ec6c; }
+  background: #53e11a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #727fa8; }
+  background: #b752f0; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #bfd8be; }
+  background: #28ea9e; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #159fc6; }
+  background: #1fa524; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #12b9a4; }
+  background: #b59969; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #bc7173; }
+  background: #2dc332; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ef6b6d; }
+  background: #8ea632; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d74e33; }
+  background: #74d68d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #f8706e; }
+  background: #2bbb6c; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #625010; }
+  background: #d857f4; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #676737; }
+  background: #02db83; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #1edc9c; }
+  background: #5775dd; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #eee89c; }
+  background: #5e96e5; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #0f7670; }
+  background: #fccb4e; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #9a0a26; }
+  background: #4262a4; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #fc121c; }
+  background: #0ce2dc; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #39c857; }
+  background: #91bcc1; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #326bff; }
+  background: #d9dc25; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #85b153; }
+  background: #466854; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #839833; }
+  background: #bd11ef; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #bedda8; }
+  background: #8b8ea3; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #0d42f4; }
+  background: #2f5d26; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6aa353; }
+  background: #1d4039; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #2236da; }
+  background: #490864; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #2f1e55; }
+  background: #27f0af; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #b8d534; }
+  background: #1c125b; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #5716ac; }
+  background: #bffd35; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #bae057; }
+  background: #ccbaaf; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #a30c60; }
+  background: #c48b1b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f609d2; }
+  background: #c1496d; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #3f8e80; }
+  background: #552f43; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #1b9d10; }
+  background: #aa2eae; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #573113; }
+  background: #0ea688; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #1d971c; }
+  background: #398f50; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #8112ac; }
+  background: #e3b330; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #9e9a5f; }
+  background: #64b985; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #e0cfb3; }
+  background: #b30ceb; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8feeae; }
+  background: #82c88a; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #2b9c7e; }
+  background: #e602be; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #391dce; }
+  background: #9dddd6; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #1af978; }
+  background: #29fb56; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #67df8c; }
+  background: #1fe81d; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #dcd432; }
+  background: #55d1c1; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #3a3b77; }
+  background: #dfa490; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #1b87dc; }
+  background: #b1fcb0; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #232876; }
+  background: #537142; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #84a9fb; }
+  background: #47fc6b; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #83191f; }
+  background: #3b106c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #3a437e; }
+  background: #2bd70c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #cccb1b; }
+  background: #305122; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #9657fc; }
+  background: #219d73; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #7087fb; }
+  background: #68c8ce; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #057742; }
+  background: #2ac841; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #d8ecf3; }
+  background: #4e3e2a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #63fa7c; }
+  background: #b51513; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #d24ef1; }
+  background: #ae5a0f; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14946,6 +14946,10 @@ option {
   grid-template-columns: 315px 1fr !important;
   grid-gap: 5px !important; }
 
+.dropdown-menu {
+  -webkit-box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.31);
+  box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.31); }
+
 .widget-box {
   position: relative;
   overflow: visible; }
@@ -14970,6 +14974,10 @@ option {
         text-decoration: none;
         margin: 5px 0px; }
 
+.dashboard-search-with-dropdown .dropdown-menu {
+  -webkit-box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0);
+  box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0); }
+
 .dashoard-dropdwon-btns-div {
   display: grid;
   grid-template-columns: 1fr auto;
@@ -14985,7 +14993,9 @@ option {
     padding: 12px;
     border: 1px solid #CDCDD6; }
   .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dropdown-menu {
-    border-radius: 0px; }
+    border-radius: 0px;
+    -webkit-box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.31);
+    box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.31); }
     .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dropdown-menu a {
       text-decoration: none; }
   .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dashboard-title-menu-dropdown {
@@ -15118,6 +15128,13 @@ option {
 
   .system-settings-content-wrapper .summary-details-row .col-lg-6 {
     padding-left: 15px; }
+
+  .dashboard-top-sec-new {
+    grid-template-columns: repeat(1, 1fr) !important; }
+    .dashboard-top-sec-new .dashoard-dropdwon-btns-div {
+      margin-bottom: 15px; }
+    .dashboard-top-sec-new .dashboard-dropdown-menu {
+      margin-bottom: 0px !important; }
 
   .profile-box {
     padding: 10px; }
