--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #9194aa; }
+  background: #357036; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #62e941; }
+  background: #2293ad; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #c37f0f; }
+  background: #a91f9d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #ec689b; }
+  background: #2df359; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #494c24; }
+  background: #482699; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #7ce0ee; }
+  background: #b252a8; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #8a4755; }
+  background: #503f3a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #dbb558; }
+  background: #8c9253; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #cb16b5; }
+  background: #065ef2; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #2b3ac4; }
+  background: #692130; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #0b9a15; }
+  background: #a5dff9; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #ef72ee; }
+  background: #82a181; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #9a07b5; }
+  background: #767893; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #7fa56f; }
+  background: #9e6b0a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #9c93cb; }
+  background: #e6494b; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #51f691; }
+  background: #7d90c4; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #52179d; }
+  background: #bce70b; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #275790; }
+  background: #05e86a; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #1cc74a; }
+  background: #7df094; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #5a64d4; }
+  background: #78ce81; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #484bf1; }
+  background: #35102b; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #0f60c9; }
+  background: #d2ac82; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a88450; }
+  background: #84b9d4; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #13d66a; }
+  background: #393768; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #d99526; }
+  background: #2aa9b5; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c728e3; }
+  background: #1b9e74; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #e68366; }
+  background: #a5b5ab; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #cfdd91; }
+  background: #488b86; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #384cab; }
+  background: #1ea027; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #029632; }
+  background: #cd03f4; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #9f42d9; }
+  background: #f646a6; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #06866e; }
+  background: #083e1e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #0f9053; }
+  background: #2f771d; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #ee5a01; }
+  background: #0e1e99; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #3adef5; }
+  background: #d48c24; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #75a7c0; }
+  background: #1d4b5c; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #dafbdd; }
+  background: #32a9c9; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #701a5d; }
+  background: #0df6a6; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8a50d7; }
+  background: #99ae03; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #063123; }
+  background: #a8b2c1; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #08140e; }
+  background: #203f48; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #7ca89a; }
+  background: #815be1; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #d4a117; }
+  background: #1c2ca9; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #1f8791; }
+  background: #b4019d; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #53e11a; }
+  background: #4ba6d7; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b752f0; }
+  background: #837966; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #28ea9e; }
+  background: #dbd1bc; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #1fa524; }
+  background: #69a3e1; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b59969; }
+  background: #c41e2d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2dc332; }
+  background: #53f1e7; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8ea632; }
+  background: #d6f492; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #74d68d; }
+  background: #b2aa21; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2bbb6c; }
+  background: #f31e90; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #d857f4; }
+  background: #c66b2f; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #02db83; }
+  background: #659e4c; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #5775dd; }
+  background: #a9f6b0; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #5e96e5; }
+  background: #cf1c15; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #fccb4e; }
+  background: #055ed2; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #4262a4; }
+  background: #2bdf72; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #0ce2dc; }
+  background: #b0ed70; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #91bcc1; }
+  background: #5229df; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d9dc25; }
+  background: #37ab5c; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #466854; }
+  background: #12a516; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #bd11ef; }
+  background: #0cf9e6; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #8b8ea3; }
+  background: #d6fadf; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #2f5d26; }
+  background: #0cab71; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #1d4039; }
+  background: #2f951e; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #490864; }
+  background: #995809; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #27f0af; }
+  background: #128720; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #1c125b; }
+  background: #be2416; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #bffd35; }
+  background: #044b37; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ccbaaf; }
+  background: #7c4e0d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c48b1b; }
+  background: #a3e4ed; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c1496d; }
+  background: #b84b2f; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #552f43; }
+  background: #a7d5b3; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #aa2eae; }
+  background: #4a67e7; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #0ea688; }
+  background: #f6eb58; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #398f50; }
+  background: #fda8d2; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #e3b330; }
+  background: #867fed; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #64b985; }
+  background: #da5b61; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b30ceb; }
+  background: #6798b7; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #82c88a; }
+  background: #a5f150; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #e602be; }
+  background: #8461d0; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9dddd6; }
+  background: #2c1029; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #29fb56; }
+  background: #7baf51; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #1fe81d; }
+  background: #d9dfa7; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #55d1c1; }
+  background: #b06512; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #dfa490; }
+  background: #e48e87; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #b1fcb0; }
+  background: #471b55; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #537142; }
+  background: #4a2ccf; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #47fc6b; }
+  background: #9537e4; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #3b106c; }
+  background: #5798bb; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #2bd70c; }
+  background: #ff1ee9; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #305122; }
+  background: #75d168; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #219d73; }
+  background: #441602; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #68c8ce; }
+  background: #9cf1b3; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #2ac841; }
+  background: #145f08; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #4e3e2a; }
+  background: #c03680; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b51513; }
+  background: #d3b5a9; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ae5a0f; }
+  background: #47456c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14947,8 +14947,8 @@ option {
   grid-gap: 5px !important; }
 
 .dropdown-menu {
-  -webkit-box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.31);
-  box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.31); }
+  -webkit-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.31);
+  box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.31); }
 
 .widget-box {
   position: relative;
@@ -14975,8 +14975,8 @@ option {
         margin: 5px 0px; }
 
 .dashboard-search-with-dropdown .dropdown-menu {
-  -webkit-box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0);
-  box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0); }
+  -webkit-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0);
+  box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0); }
 
 .dashoard-dropdwon-btns-div {
   display: grid;
@@ -14994,8 +14994,8 @@ option {
     border: 1px solid #CDCDD6; }
   .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dropdown-menu {
     border-radius: 0px;
-    -webkit-box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.31);
-    box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.31); }
+    -webkit-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.31);
+    box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.31); }
     .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dropdown-menu a {
       text-decoration: none; }
   .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dashboard-title-menu-dropdown {
